--- a/index.html
+++ b/index.html
@@ -12,31 +12,32 @@
     />
   </head>
   <body>
+    <header>
+      <a href="#" class="left">Material Landing</a>
+      <div class="topbarOption">
+        <ul class="topbarMenu">
+          <li class="navItem">
+            <a class="right">About</a>
+          </li>
+          <li class="navItem">
+            <a class="right">Projects</a>
+          </li>
+          <li class="navItem">
+            <a class="right">Pricing</a>
+          </li>
+          <li class="navItem">
+            <a class="right">Team</a>
+          </li>
+          <li class="navItem">
+            <a class="right">Contact</a>
+          </li>
+        </ul>
+        <button class="btn1">DOWNLOAD</button>
+      </div>
+    </header>
     <div class="base">
       <div class="bgImage">
-        <div class="topbar">
-          <a href="#" class="left">Material Landing</a>
-          <div class="topbarOption">
-            <ul class="topbarMenu">
-              <li class="navItem">
-                <a class="right">About</a>
-              </li>
-              <li class="navItem">
-                <a class="right">Projects</a>
-              </li>
-              <li class="navItem">
-                <a class="right">Pricing</a>
-              </li>
-              <li class="navItem">
-                <a class="right">Team</a>
-              </li>
-              <li class="navItem">
-                <a class="right">Contact</a>
-              </li>
-            </ul>
-            <button class="btn1">DOWNLOAD</button>
-          </div>
-        </div>
+        
 
         <div class="introBox">
           <div class="intro">
