--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <center>
       <hr
         size="1px"
-        style="margin: 30px 0; background-color: rgba(200, 200, 200, 0.1)"
+        style="margin-bottom: 50px; background-color: rgba(200, 200, 200, 0.1)"
       />
     </center>
     <section class="project">
