--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </p>
 
         <div class="projectDesc">
-          <img src="/img/pimage.jpg" alt="Project" />
+          <img src="img/pimage.jpg" alt="Project" />
 
           <div class="desc desc-1">
             <div class="description">
