Removed the inline CSS

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
       <div class="about__blocks">
         <div class="block--1 block">
-          <i class="fa fa-dashboard" style="color: orange"></i>
+          <i class="fa fa-dashboard"></i>
           <h2>Design</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim,
@@ -120,7 +120,7 @@
           </p>
         </div>
         <div class="block--2 block">
-          <i class="fa fa-comments-o" style="color: rgb(37, 168, 219)"></i>
+          <i class="fa fa-comments-o"></i>
           <h2>Feedback</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim,
@@ -128,7 +128,7 @@
           </p>
         </div>
         <div class="block--3 block">
-          <i class="fa fa-cubes" style="color: red"></i>
+          <i class="fa fa-cubes"></i>
           <h2>Execution</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim,
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="description">
-              <i class="fa fa-code" style="color: red"></i>
+              <i class="fa fa-code"></i>
 
               <div class="desc__tech sec">
                 <h1>Technology</h1>
@@ -178,7 +178,7 @@
               </div>
             </div>
             <div class="description">
-              <i class="fa fa-money" style="color: rgb(110, 12, 129)"></i>
+              <i class="fa fa-money"></i>
               <div class="desc__finance sec">
                 <h1>Finance</h1>
                 <p>
@@ -195,7 +195,6 @@
     <center>
       <hr
         size="1px"
-        style="margin-bottom: 50px; background-color: rgba(200, 200, 200, 0.1)"
       />
     </center>
     <section class="project">
@@ -203,7 +202,7 @@
         <div class="project--2 projectDesc">
           <div class="desc desc-1">
             <div class="description">
-              <i class="fa fa-bar-chart" style="color: rgb(67, 50, 228)"></i>
+              <i class="fa fa-bar-chart"></i>
               <div class="desc__edu sec">
                 <h1>Marketing</h1>
                 <p>
@@ -214,7 +213,7 @@
               </div>
             </div>
             <div class="description">
-              <i class="fa fa-music" style="color: rgb(228, 48, 117)"></i>
+              <i class="fa fa-music"></i>
 
               <div class="desc__tech sec">
                 <h1>Entertainment</h1>
@@ -226,7 +225,7 @@
               </div>
             </div>
             <div class="description">
-              <i class="fa fa-smile-o" style="color: rgb(33, 187, 248)"></i>
+              <i class="fa fa-smile-o"></i>
 
               <div class="desc__finance sec">
                 <h1>Communication</h1>
@@ -325,7 +324,6 @@
               <p class="link">
                 <i
                   class="fa fa-twitter"
-                  style="color: rgb(59, 159, 226); font-size: 15px"
                   >@markhalll</i
                 >
               </p>
@@ -342,7 +340,6 @@
               <p class="link">
                 <i
                   class="fa fa-twitter"
-                  style="color: rgb(59, 159, 226); font-size: 15px"
                   >@nicolewest</i
                 >
               </p>
@@ -362,7 +359,6 @@
               <p class="link">
                 <i
                   class="fa fa-twitter"
-                  style="color: rgb(59, 159, 226); font-size: 15px"
                   >@hannancru</i
                 >
               </p>
@@ -379,7 +375,6 @@
               <p class="link">
                 <i
                   class="fa fa-twitter"
-                  style="color: rgb(59, 159, 226); font-size: 15px"
                   >@vincenthar</i
                 >
               </p>
