Fixing all the alignments

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link href="https://css.gg/play-button.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
@@ -65,7 +67,7 @@
 
     <!-- About Section -->
 
-    <div class="about">
+    <section class="about">
       <div class="tiles">
         <div class="tile tile--1">
           <i class="fa fa-line-chart"></i>
@@ -100,6 +102,8 @@
           </p>
         </div>
       </div>
+    </section>
+    <section class="about">
       <div class="about__title">
         <h1>Why work with us?</h1>
         <p>
@@ -136,7 +140,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </section>
 
     <!-- Project section -->
     <section class="project">
@@ -244,7 +248,7 @@
     <!--Pricing section-->
 
     <section class="pricing">
-      <div class="container" style="align-items: normal">
+      <div class="container">
         <div class="pricing-desc">
           <h1>Our pricing plans</h1>
           <p>
@@ -462,3 +466,5 @@
     </footer>
   </body>
 </html>
+
+
