Fixing all the alignments

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
       </div>
     </section>
     <section class="about">
-      <div class="about__title">
+      <div class="container">
+              <div class="about__title">
         <h1>Why work with us?</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
@@ -113,6 +114,7 @@
           veniam voluptate natus!
         </p>
       </div>
+    
 
       <div class="about__blocks">
         <div class="block--1 block">
@@ -140,6 +142,8 @@
           </p>
         </div>
       </div>
+
+
     </section>
 
     <!-- Project section -->
