--- a/index.html
+++ b/index.html
@@ -428,24 +428,24 @@
                 </div>
                 <div class="send">
                   <button class="send">
-                    <i class="fa fa-send-o" style="font-size: 12px"></i> SEND
+                    <i class="fa fa-send-o"></i> SEND
                   </button>
                 </div>
               </form>
 
               <div class="info">
                 <div class="address item">
-                  <i class="fa fa-map-marker" style="font-size: 28px"></i>
+                  <i class="fa fa-map-marker"></i>
                   <p>140, City Center, New York, USA</p>
                 </div>
 
                 <div class="contactNo item">
-                  <i class="fa fa-phone" style="font-size: 28px"></i>
+                  <i class="fa fa-phone"></i>
                   <p>+01 123 456 89</p>
                 </div>
 
                 <div class="mail item">
-                  <i class="fa fa-envelope" style="font-size: 28px"></i>
+                  <i class="fa fa-envelope"></i>
                   <p>contact@company.com</p>
                 </div>
               </div>
